# VRobs-studio

./: .qmlls.ini  CMakeLists.txt  README.md
build_ubuntu/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  compile_commands.json
build_ubuntu/.cmake/api/v1/reply/: cache-v2-40519ec15fda9afb4c10.json  cache-v2-476f90b68d3c9662553c.json  cmakeFiles-v1-95e612c7f523be0d9142.json  codemodel-v2-b8462227c61299e66025.json  directory-_deps.nlohmann_json-build-Debug-21e57153647f1f1b1824.json  directory-_deps.openxr-build-Debug-f9b02cb4f597a5343d35.json  (+104 more)
core/: README_core.md
core/src/neuralid_schema/: EXPLANATION FOR SYSTEM.md  MASTERDOC_ID_SYSTEM_ARCHITECTURE.md  README_ObjectBox_Documentation.md  neuralid_index.fbs  species_index.fbs
core/src/neuralid_schema/app_profiles/: app-profile-00000000000000000000000000.fbs  app-profile-index.fbs
core/src/neuralid_schema/tribe/: tribe_Index.fbs
docs/: MASTERDOC_ID_SYSTEM_ARCHITECTURE.md
docs/architecture/: README_Rendering.md  README_SYSTEM_STATE_CONFORMITY.md  README_ThreeDModelNode.md  VirtualCam_README.md
docs/architecture/neuralid_schema/N/: TYPES.md
docs/architecture/neuralid_schema/P/: TYPES.md
docs/architecture/neuralid_schema/U/: TYPES.md
docs/architecture/neuralid_schema/W/: TYPES.md
tree-maker/: 20251217042521847-tree.md
ui/: UI_COMPONENT_DESIGN_RULES.md
ui/app/: CMakeLists.txt  CornerButton.qml  MainWindow.qml  SlidingPanel.qml
ui/frames/: ActiveFrame.qml  BlueprintFrame.qml  CMakeLists.txt
ui/panels/: AIChatPanel.qml  CMakeLists.txt  DockChatPanel.qml  SettingsPanel.qml
(+684 files in other folders)
